# Azure-Content-Understanding

./: .gitignore  README.md
demo-app/: README.md  app.py  pyproject.toml
demo-app/assets/: keyboard.js  style.css
demo-app/cached_results/: act1_maintenance_log.json  act1_maintenance_log_pymupdf.txt
demo-app/components/: code_panel.py  doc_viewer.py  output_panel.py  slide_frame.py
demo-app/pages/: __init__.py  act1_extraction.py  act2_visual.py  act3_custom.py  act4_synthesis.py  act5_framework.py
demo-app/scripts/: deploy_analyzers.py
demo-app/services/: __init__.py  cache.py  cu_client.py
demo-app/static/: deck.html
src/: README.md  demo_fiber_cut_MAF.ipynb  generate_synthetic_clinical_data.py
