[project]
name = "dem331-demo"
version = "0.1.0"
description = "DEM331 Hybrid Presentation — Slide Deck + Live Code Demo App"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-contentunderstanding>=1.2.0b1",
    "dash>=4.3.0rc0",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=2.7.0",
    "openai>=2.38.0",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
]

[project.scripts]
demo = "app:main"
