[project]
name = "dem331-demo"
version = "0.1.0"
description = "DEM331 Hybrid Presentation — Slide Deck + Live Code Demo App"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-azure-contentunderstanding>=1.0.0a0",
    "agent-framework-foundry>=1.6.0",
    "azure-ai-contentunderstanding>=1.2.0b1",
    "azure-identity>=1.26.0b2",
    "dash>=4.3.0rc0",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=2.7.0",
    "img2pdf>=0.6.3",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.0",
    "openai>=2.38.0",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.0",
    "requests>=2.31.0",
]

[project.scripts]
demo = "app:main"

[tool.uv]
# agent-framework-azure-contentunderstanding pins azure-ai-contentunderstanding<1.1,
# but the notebook (and Acts 1-4) require to_llm_input() which only exists in
# 1.2.0b1+. Override the conflict — the framework's CU provider works fine
# against the newer SDK at runtime.
override-dependencies = [
    "azure-ai-contentunderstanding>=1.2.0b1",
]
prerelease = "allow"
